Issue 112: Allow vertex add operations to constrained triangulation